# curator

./: .dockerignore  .gitignore  .gitleaksignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  README.md  SECURITY.md  compose.yaml  curator.example.toml  deny.toml  justfile  lefthook.yml
.claude/skills/add-producer/: SKILL.md
.claude/skills/contract-change/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  e2e-real.yml  pages.yml  release.yml
contracts/: README.md
contracts/kp-config/: CHANGELOG.md  v1.md  v1.schema.json
contracts/kp-note/: CHANGELOG.md  v1.md  v1.schema.json
contracts/mcp/: CHANGELOG.md  v1.md
contracts/proposals/: CHANGELOG.md  v1.md  v1.schema.json
crates/curator-cli/: Cargo.toml
crates/curator-cli/src/: main.rs
crates/curator-cli/src/tui/: app.rs  common.rs  diff.rs  digest.rs  mod.rs  search.rs  shell.rs  view.rs
crates/curator-cli/tests/: cli.rs  librarian.rs
crates/curator-core/: Cargo.toml
crates/curator-core/src/: checksum.rs  config.rs  id.rs  lib.rs  managed.rs  proposal.rs  time.rs  vault.rs
crates/curator-core/tests/: contract_schemas.rs
crates/curator-index/: Cargo.toml
crates/curator-index/src/: chunk.rs  db.rs  embed.rs  embed_onnx.rs  epoch.rs  error.rs  lib.rs  query.rs
crates/curator-index/tests/: epoch.rs  search.rs
crates/curator-ingest/: Cargo.toml
crates/curator-ingest/fixtures/events/: events-20260701-2.jsonl
crates/curator-ingest/fixtures/vault/: .kpignore
crates/curator-ingest/fixtures/vault/curio/: broken-import.md
crates/curator-ingest/fixtures/vault/drafts/: wip.md
crates/curator-ingest/fixtures/vault/notes/: databases.md
crates/curator-ingest/src/: chunker.rs  curio.rs  error.rs  events.rs  ingest.rs  lib.rs  walker.rs  webclip.rs
crates/curator-ingest/tests/: ingest.rs  vendor_pin.rs
crates/curator-librarian/: Cargo.toml
crates/curator-librarian/src/: digest.rs  lib.rs  patch.rs  proposals.rs  uuid7.rs
crates/curator-librarian/tests/: digest_e2e.rs
crates/curator-mcp/: Cargo.toml
crates/curator-mcp/src/: engine.rs  http.rs  lib.rs  server.rs  types.rs
crates/curator-mcp/tests/: http_auth.rs  roundtrip.rs
crates/curator-zotero/: Cargo.toml
crates/curator-zotero/src/: error.rs  item.rs  lib.rs  managed.rs  map.rs  sync.rs  webdav.rs
crates/curator-zotero/tests/: api.rs  mapping.rs  sync.rs  webdav.rs
crates/kp-cli/: Cargo.toml
crates/kp-cli/src/: main.rs
crates/kp-cli/tests/: cli.rs  librarian.rs
crates/kp-core/: Cargo.toml
crates/kp-core/src/: config.rs  id.rs  lib.rs  note.rs  proposal.rs  time.rs  vault.rs
crates/kp-core/tests/: contract_schemas.rs
crates/kp-index/: Cargo.toml
crates/kp-index/src/: chunk.rs  db.rs  embed.rs  embed_onnx.rs  epoch.rs  error.rs  lib.rs  query.rs  search.rs
crates/kp-index/tests/: epoch.rs  search.rs
crates/kp-ingest/: Cargo.toml
crates/kp-ingest/fixtures/events/: events-20260701.jsonl  events-20260702.jsonl
crates/kp-ingest/fixtures/vault/: now.md  scratch.tmp.md
crates/kp-ingest/fixtures/vault/.curio/: manifest.json
crates/kp-ingest/fixtures/vault/curio/: rust-async-patterns.md
crates/kp-ingest/fixtures/vault/guides/: chunking.md
crates/kp-ingest/fixtures/vault/notes/: rust-notes.md
crates/kp-ingest/src/: chunker.rs  curio.rs  error.rs  events.rs  ingest.rs  lib.rs  walker.rs
crates/kp-ingest/tests/: ingest.rs  vendor_pin.rs
crates/kp-librarian/: Cargo.toml
crates/kp-librarian/src/: digest.rs  lib.rs  patch.rs  proposals.rs
crates/kp-librarian/tests/: digest_e2e.rs
crates/kp-mcp/: Cargo.toml
crates/kp-mcp/src/: engine.rs  http.rs  lib.rs
crates/kp-mcp/tests/: http_auth.rs  roundtrip.rs
crates/kp-zotero/: Cargo.toml
crates/kp-zotero/src/: api.rs  error.rs  lib.rs  managed.rs  map.rs  sync.rs  webdav.rs
crates/kp-zotero/tests/: api.rs  mapping.rs  sync.rs  webdav.rs
docs/design/: architecture.md  decisions.md  enhancer.md  known-issues.md  roadmap.md
docs/design/research/: README.md  curioContract.json  designs.json  distBaseline.json  ecosystem.json  kpState.json  roadmap.json  verdicts.json
docs/release/: runbook.md
docs/site/: README.md  nav.json
docs/site/assets/: README.md  mermaid-init.js  style.css
docs/site/src/: concepts.md  index.md  operations.md  quickstart.md
docs/site/src/integrations/: curio.md  obsidian.md  producers.md  zotero.md
docs/site/src/reference/: cli.md  clients.md  config.md  mcp.md
examples/: README.md  rss-to-notes.sh
examples/compose/: .env.example  curator.toml
examples/sample-vault/: now.md
examples/sample-vault/notes/: agents-and-notes.md  chunking-strategies.md  embedded-vector-search.md  espresso-dialing-in.md  hybrid-retrieval.md  personal-search-engines.md  reading-list.md  sourdough-hydration.md  sqlite-as-application-file-format.md  tomato-companion-planting.md  zettelkasten-workflow.md
fixtures/zotero/: children-KEYJRNL1.json  deleted.json  fulltext.json  item-KEYJRNL1.json  item-generic.json  item-report.json  items-delta.json  items-page1.json  items-page2.json  storage.prop
fixtures/zotero/golden/: book.md  generic-podcast.md  journal-article.md  report.md  webpage.md
xtask/: Cargo.toml
xtask/src/: coverage.rs  docs.rs  litmus.rs  main.rs
