[workspace]
resolver = "3"
members = [
    "crates/kp-core",
    "crates/kp-index",
    "crates/kp-ingest",
    "crates/kp-zotero",
    "crates/kp-mcp",
    "crates/kp-librarian",
    "crates/kp-cli",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
# Pre-release: nothing is published to crates.io yet.
publish = false
# NOTE: no `license` field — the license is deliberately undecided (see README).

[workspace.dependencies]
# Intra-workspace crates (dependency direction is strictly downward:
# kp-cli -> {kp-ingest, kp-zotero, kp-mcp, kp-librarian} -> kp-index -> kp-core).
kp-core = { path = "crates/kp-core" }
kp-index = { path = "crates/kp-index" }
kp-ingest = { path = "crates/kp-ingest" }
kp-zotero = { path = "crates/kp-zotero" }
kp-mcp = { path = "crates/kp-mcp" }
kp-librarian = { path = "crates/kp-librarian" }

# Shared third-party deps.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# serde_yaml is archived upstream but remains the stable, ubiquitous serde
# YAML impl; kp-note/v1 frontmatter is flat YAML well inside its supported
# surface. Revisit if a maintained successor standardizes.
serde_yaml = "0.9"
sha2 = "0.11"
thiserror = "2"
toml = "0.9"
tracing = "0.1"
# 0.40 pulls libsqlite3-sys 0.38, whose build script needs the (still
# unstable on this toolchain) cfg_select! feature; 0.37 is the newest line
# that builds on stable 1.94.
rusqlite = { version = "0.37", features = ["bundled"] }
sqlite-vec = "0.1.9"

# Dev-only.
proptest = "1"
tempfile = "3"

[workspace.lints.rust]
# Relax to a scoped `deny` + local `allow` ONLY if sqlite-vec FFI registration
# truly requires unsafe, with a comment at the site explaining why.
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
