[workspace]
resolver = "3"
members = [
    "crates/kp-core",
    "crates/kp-index",
    "crates/kp-ingest",
    "crates/kp-zotero",
    "crates/kp-mcp",
    "crates/kp-librarian",
    "crates/kp-cli",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
# Pre-release: nothing is published to crates.io yet.
publish = false
# NOTE: no `license` field — the license is deliberately undecided (see README).

[workspace.dependencies]
# Intra-workspace crates (dependency direction is strictly downward:
# kp-cli -> {kp-ingest, kp-zotero, kp-mcp, kp-librarian} -> kp-index -> kp-core;
# kp-librarian also rides kp-ingest, one tier down, for the Curio
# ownership oracle + managed-region parser).
kp-core = { path = "crates/kp-core" }
kp-index = { path = "crates/kp-index" }
kp-ingest = { path = "crates/kp-ingest" }
kp-zotero = { path = "crates/kp-zotero" }
kp-mcp = { path = "crates/kp-mcp" }
kp-librarian = { path = "crates/kp-librarian" }

# Shared third-party deps.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Boundary validation of producer documents against the VENDORED schemas
# (contracts/vendor/). default-features = false strips the http/file
# reference resolvers: every schema is embedded at compile time and
# self-contained, and a remote $ref must be a hard error, never a fetch.
jsonschema = { version = "0.46", default-features = false }
# serde_yaml is archived upstream but remains the stable, ubiquitous serde
# YAML impl; kp-note/v1 frontmatter is flat YAML well inside its supported
# surface. Revisit if a maintained successor standardizes.
serde_yaml = "0.9"
sha2 = "0.11"
thiserror = "2"
toml = "0.9"
tracing = "0.1"
# 0.40 pulls libsqlite3-sys 0.38, whose build script needs the (still
# unstable on this toolchain) cfg_select! feature; 0.37 is the newest line
# that builds on stable 1.94.
rusqlite = { version = "0.37", features = ["bundled"] }
sqlite-vec = "0.1.9"
# The official Rust MCP SDK — pinned EXACTLY: the MCP surface v1 tool
# router and transports are written against this API revision; bump
# deliberately, with the round-trip tests as the gate.
rmcp = { version = "=2.1.0", default-features = false }
# rmcp generates tool input/output JSON Schemas via schemars 1.x.
schemars = "1"
tokio = { version = "1", default-features = false }
# Serves rmcp's streamable-HTTP tower service + the bearer-auth layer.
axum = { version = "0.8", default-features = false }
# Sortable proposal ids (proposals/v1: the ULID is also the dir name).
ulid = "1"
# Unified diffs for proposals/v1 `changes.patch` rendering.
similar = "3"

# Dev-only.
proptest = "1"
tempfile = "3"
tower = "0.5"
http-body-util = "0.1"

[workspace.lints.rust]
# Relax to a scoped `deny` + local `allow` ONLY if sqlite-vec FFI registration
# truly requires unsafe, with a comment at the site explaining why.
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
