[workspace]
resolver = "3"
members = [
    "crates/curator-core",
    "crates/curator-index",
    "crates/curator-ingest",
    "crates/curator-zotero",
    "crates/curator-mcp",
    "crates/curator-librarian",
    "crates/curator-cli",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
# 1.89 for std file locking (File::try_lock) — the index writer lock.
rust-version = "1.89"
# Pre-release: nothing is published to crates.io yet.
publish = false
# NOTE: no `license` field — the license is deliberately undecided (see README).

[workspace.dependencies]
# Intra-workspace crates (dependency direction is strictly downward:
# curator-cli -> {curator-ingest, curator-zotero, curator-mcp, curator-librarian} -> curator-index -> curator-core;
# curator-librarian also rides curator-ingest, one tier down, for the Curio
# ownership oracle + managed-region parser).
curator-core = { path = "crates/curator-core" }
# default-features = false at the workspace edge: library consumers
# never pull the ONNX embedder stack; the curator-cli binary opts in via its
# default `embed-onnx` feature (and `-p curator-index` alone still gets its
# own default).
curator-index = { path = "crates/curator-index", default-features = false }
curator-ingest = { path = "crates/curator-ingest" }
curator-zotero = { path = "crates/curator-zotero" }
curator-mcp = { path = "crates/curator-mcp" }
curator-librarian = { path = "crates/curator-librarian" }

# Shared third-party deps.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Boundary validation of producer documents against the VENDORED schemas
# (contracts/vendor/). default-features = false strips the http/file
# reference resolvers: every schema is embedded at compile time and
# self-contained, and a remote $ref must be a hard error, never a fetch.
jsonschema = { version = "0.46", default-features = false }
# serde_yaml is archived upstream but remains the stable, ubiquitous serde
# YAML impl; kp-note/v1 frontmatter is flat YAML well inside its supported
# surface. Revisit if a maintained successor standardizes.
serde_yaml = "0.9"
sha2 = "0.11"
thiserror = "2"
toml = "0.9"
tracing = "0.1"
# Binaries only: renders library `tracing` events (contract-promised
# warnings, e.g. kp-config/v1 unknown-key warnings) to stderr.
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
# 0.40 pulls libsqlite3-sys 0.38, whose build script needs the (still
# unstable on this toolchain) cfg_select! feature; 0.37 is the newest line
# that builds on stable 1.94.
rusqlite = { version = "0.37", features = ["bundled"] }
sqlite-vec = "0.1.9"
# The official Rust MCP SDK — pinned EXACTLY: the MCP surface v1 tool
# router and transports are written against this API revision; bump
# deliberately, with the round-trip tests as the gate.
rmcp = { version = "=2.1.0", default-features = false }
# rmcp generates tool input/output JSON Schemas via schemars 1.x.
schemars = "1"
tokio = { version = "1", default-features = false }
# Serves rmcp's streamable-HTTP tower service + the bearer-auth layer.
axum = { version = "0.8", default-features = false }
# Sortable proposal ids (proposals/v1: the ULID is also the dir name).
ulid = "1"
# Unified diffs for proposals/v1 `changes.patch` rendering.
similar = "3"
# xtask only: markdown -> HTML for the deterministic docs-site generator
# (`xtask docs`). default-features = false keeps just the html renderer.
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }

# Dev-only.
proptest = "1"
tempfile = "3"
tower = "0.5"
http-body-util = "0.1"

[workspace.lints.rust]
# Relax to a scoped `deny` + local `allow` ONLY if sqlite-vec FFI registration
# truly requires unsafe, with a comment at the site explaining why.
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
