[package]
name = "xtask"
description = "Workspace automation (cargo xtask pattern): the grep litmus, the coverage gate, and the docs-site generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
# The coverage gate parses cargo-llvm-cov JSON exports; the docs-site
# generator parses docs/site/nav.json.
serde_json = { workspace = true }
# The docs-site generator (`xtask docs`): markdown -> HTML.
pulldown-cmark = { workspace = true }

[lints]
workspace = true
