[package]
name = "curator-cli"
description = "Curator (`curator`) — the Knowledge Plane CLI: init, ingest, reindex, search, mcp, propose/review/apply, digest, status"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "curator"
path = "src/main.rs"

[dependencies]
curator-core = { workspace = true }
curator-index = { workspace = true }
curator-ingest = { workspace = true }
curator-zotero = { workspace = true }
curator-mcp = { workspace = true }
curator-librarian = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# `curator mcp serve` drives the async transports from a sync main.
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
# The pinned in-process ONNX embedder (`embedder = "builtin"`), on by
# default. `cargo build -p curator-cli --no-default-features` produces a lean
# hash-only `curator` with zero build-time or run-time downloads.
#
# `embed-onnx-dynamic` swaps the ONNX Runtime *link* strategy from
# build-time download to runtime system load (see curator-index) — the
# Homebrew formula builds with `--no-default-features --features
# embed-onnx-dynamic` so it needs no network at build time and loads
# Homebrew's `onnxruntime` at run time.
default = ["embed-onnx"]
embed-onnx = ["curator-index/embed-onnx"]
embed-onnx-dynamic = ["curator-index/embed-onnx-dynamic"]

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
