[package]
name = "curator-core"
description = "Curator core: vault model, kp-note/v1 frontmatter, identity, kp-config/v1 loading, proposals/v1"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
similar = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
# Published-schema conformance tests (contracts/*/v1.schema.json).
jsonschema = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
