[package]
name = "curator-ingest"
description = "Knowledge Plane ingest: the Curio adapter (notes + events tail), web clips, ingest orchestration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
jsonschema = { workspace = true }
curator-core = { workspace = true }
# The workspace dep pins default-features = false: the curator-cli binary
# (not this library) decides whether the ONNX stack is compiled in.
curator-index = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
