[package]
name = "kp-core"
description = "Knowledge Plane core: vault model, kp-note/v1 frontmatter, identity, kp-config/v1 loading, proposals/v1"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
