[package]
name = "kp-index"
description = "Knowledge Plane index: chunker, Embedder trait (builtin ONNX / hash test embedder), one embedded index.db (vectors + FTS + edges), hybrid retrieval, blue/green epochs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
kp-core = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
