[package]
name = "kp-ingest"
description = "Knowledge Plane ingest: the Curio adapter (notes + events tail), web clips, ingest orchestration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
kp-core = { workspace = true }
kp-index = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
