[package]
name = "kp-librarian"
description = "Knowledge Plane librarian: deterministic-first maintenance + digest loops; optional LLM harness adapter as a prose enhancer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
kp-core = { workspace = true }
kp-index = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
