[package]
name = "kp-librarian"
description = "Knowledge Plane librarian: deterministic-first maintenance + digest loops; optional LLM harness adapter as a prose enhancer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
kp-core = { workspace = true }
kp-index = { workspace = true }
# The proposals APPLY validator consults the Curio ownership oracle
# (`.curio/manifest.json`) and the managed-region parser — both live in
# kp-ingest's adapter module (kp-librarian -> kp-ingest is a downward
# edge; see the workspace dependency-direction note).
kp-ingest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
