[package]
name = "kp-mcp"
description = "Knowledge Plane MCP server: the one agent entrypoint — MCP surface v1 (stdio default, streamable HTTP + bearer optional)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
kp-core = { workspace = true }
kp-index = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
