[package]
name = "kp-mcp"
description = "Knowledge Plane MCP server: the one agent entrypoint — MCP surface v1 (stdio default, streamable HTTP + bearer optional)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
kp-core = { workspace = true }
kp-index = { workspace = true }
rmcp = { workspace = true, features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
# net for the HTTP listener; rt so serve_* can be driven by any runtime.
tokio = { workspace = true, features = ["net", "rt", "macros"] }
# Serves rmcp's streamable-HTTP tower service; auth is a plain layer.
axum = { workspace = true, features = ["http1", "tokio"] }
tracing = { workspace = true }

[dev-dependencies]
# In-process client<->server round trips over tokio duplex pipes.
rmcp = { workspace = true, features = ["client"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "time"] }
# Drive the axum router in-process (no sockets) for auth tests.
tower = { workspace = true, features = ["util"] }
http-body-util = { workspace = true }

[lints]
workspace = true
